Added content, UCLouvain branding.

--- a/_layouts/twitter.html
+++ b/_layouts/twitter.html
@@ -9,7 +9,7 @@ layout: compress
   <body>
     <div id="shadow"></div>
 
-      {% include header.html %}
+      {% include index_header.html %}
       {% include aside_twitter.html %}
 
     <main class="content-wrapper-twitter blog-content">
