--- a/_includes/aside_twitter.html
+++ b/_includes/aside_twitter.html
@@ -1,4 +1,4 @@
 <aside class="sidebar-twitter" role="note">
-  <a class="twitter-timeline" href="https://twitter.com/UCLouvain_be?ref_src=twsrc%5Etfw">Tweets by UCLouvain_be</a>
+  <a class="twitter-timeline" href="https://twitter.com/AIA_UCLouvain">Tweets by AIA_UCLouvain</a>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </aside>
